@@ -1,4 +1,9 @@
-Changes since 20031203:
+Changes since 20031218a:
+- Change: list active and list newsgroups are now faster when a pattern
+  is given that does not contain wildmat meta characters.
+- Change: list active.times is rejected with a 500 code for now.
+
+20031218a: Changes since 20031203a:
 - Change: texpire now prints why a particular group directory is not
   expired even though 0 articles are kept.
 - Change: lsmac.pl now defaults to UTC and has a --local option to
